Update profile image URL in expandable-geek-profile.html

--- a/expandable-geek-profile.html
+++ b/expandable-geek-profile.html
@@ -257,7 +257,7 @@
                 <div class="flex justify-center mb-4 md:mb-6">
                     <div class="relative">
                         <div class="w-20 md:w-24 h-20 md:h-24 rounded-full bg-neon-blue/20 border-2 border-neon-blue border-glow-blue flex items-center justify-center overflow-hidden avatar-glow">
-                            <img src="https://p3-flow-imagex-sign.byteimg.com/tos-cn-i-a9rns2rl98/rc/pc/code_assistant/33e0a76fd4c544a58cc5329525330c7b~tplv-a9rns2rl98-image.image?rcl=202510101509314E56BEA73D60710857E0&amp;rk3s=8e244e95&amp;rrcfp=e75484ac&amp;x-expires=1760684971&amp;x-signature=mx6mRxNN3cjrkNKoR8Y9o%2BMFrhI%3D" alt="男孩头像" class="w-full h-full object-cover rounded-full">
+                            <img src="https://image2url.com/r2/default/images/1767147795713-c03aedfd-9762-45f7-93f3-552ae6180faf.jpg" alt="男孩头像" class="w-full h-full object-cover rounded-full">
                         </div>
                         <!-- 在线状态指示器 -->
                         <div class="absolute bottom-0 right-0 w-4 h-4 md:w-5 md:h-5 rounded-full bg-green-500 border-2 border-card-bg"></div>
